--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "node-forge": "^1.3.1",
     "pdf-to-printer": "^5.6.0",
+    "pdfkit": "^0.17.1",
     "selfsigned": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
